
2005-06-29 cjg 

 - [#972] Caused indexer to reopen STDIN and STDOUT as /dev/null
    and the indexer log file - this prevents a warning about re-opening
    STDOUT as input etc.

2005-06-30 cjg

 - Added new method EPrints::Utils::email_date which gives the current
    date and time encoded for an email header.
 - [#1290] Added Date: headers to both send_email_via_smtp and 
    via_sendmail.
 - [#1210] Fixed typo.
 - [#1097] The any/all of these fields option is now hidden if there
    is only a single search field.

2005-07-01 cjg

 - [#1146] Added an empty phrase to the top of /cgi/latest in case
    people want to add an introduction.

2005-07-04 cjg

 - [#1182] Added default values to user fields "frequency" and 
    "mailempty" this will stop new editors being bugged for values 
    which should have sensible defaults.
 - [#1159] Fixed a bug which meant that edit_eprint would give a 
    500 error rather than a clean warning in the situation that
    no dataset was given AND the eprintid did not exist.
 - [#1005] Code in EPrints.pm which handles threads now checks to
    make sure that loops don't exist. Before it just got into a tight
    loop and never exited! If a loop is detected then the code is
    exited and a warning is logged. If rendering a thread HTML list 
    then a warning message is placed at the point the loop was
    detected. 

2005-07-05 cjg

 - Added option "show_ids_in_log" which causes the id of the archive
    causing the log message to be prefixed to every line it logs.
    This can be set at the archive level, but is more useful in
    SystemSettings to control all archives.
 - Added method to EPrints::Archive, "can_call" which tests to see
    if it is possible to call a subroutine in the config. package.
 - Added method to EPrints::Archive. "try_call" which acts like
    "call" but first checks that it can can_call, and if not 
    silently fails, rather than cause a perl error.